[package]
name = "ancs-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
env_logger = "0.10.0"
futures = "0.3.28"
oneshot = "0.1.5"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
uuid = "1.3.1"
